2009-10-29  Sebastien Pouliot  <sebastien@ximian.com>

	* ModuleBuilder.cs: Add missing 'className' validations in GetType
	* TypeBuilder.cs: Add missing 'names' validations in 
	DefineGenericParameters

2009-10-27  Marek Safar  <marek.safar@gmail.com>

	* GenericTypeParameterBuilder.cs: Attributes work under NET_4_0.

2009-10-24  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyBuilder.cs: For Silverlight only AssemblyBuilderAccess.Run
	is supported (browser-side) but we still allow other values when
	compiling (e.g. smcs) outside the browser (wo coreclr)
	* TypeBuilder.cs (GetConstructor): Fix validations

2009-09-18  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyBuilder.cs, ConstructorBuilder.cs, MethodBuilder.cs, 
	TypeBuilder.cs: Don't process PermissionSet under NET_2_1

2009-09-06 Rodrigo Kumpera  <rkumpera@novell.com>

	* ConstructorOnTypeBuilderInst.cs (GetParameters): Make it work for
	finished types.

2009-09-02 Rodrigo Kumpera  <rkumpera@novell.com>

	* ILGenerator.cs (label_fixup): Check for unmarked labels.
	Fixes #536243.

2009-08-06 Rodrigo Kumpera  <rkumpera@novell.com>

	* MethodBuilder.cs: Mark generic_params internal.

	* MethodOnTypeBuilderInst.cs: Add fields to support
	inflated generic methods. Implement generics related
	methods.

2009-08-06  Marek Safar  <marek.safar@gmail.com>

	* ILGenerator.cs: Add 4.0 ILOffset.

2009-08-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* DerivedTypes.cs (DerivedType): Implement ToString ().

2009-08-03 Rodrigo Kumpera  <rkumpera@novell.com>

	* EventBuilder.cs: Make some fields internal.

	* TypeBuilder.cs: Make events field internal.
	Remove some MonoTODOs that are already done.

	* EventOnTypeBuilderInst.cs: New file which implements
	the required functionality by compiler context.

2009-07-30 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilder.cs (IsDefined): Throw if not
	created and not in compiler context.

2009-07-30 Rodrigo Kumpera  <rkumpera@novell.com>
